--- a/sitePart1.css
+++ b/sitePart1.css
@@ -5,9 +5,15 @@
     align-items: center;
 }
 nav{
-    color: aliceblue;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 6px;
 }
-
+.mom{
+    float: left;
+    margin-top: 10px;
+   
+}
 
 header{
     min-height: 80px;
@@ -30,11 +36,16 @@ footer{
     background:rgb(43, 255, 0);
     color: black;
     flex-shrink: 0
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 6px;
 } 
-
 footer .momr-n a{
     color: aliceblue;
-    padding: 2px 14px; 
+    padding: 12px 12px;
+    text-align: center;
+    padding-top: 22px;
+    padding-bottom: 5px;
 }
 p .matn-l{
     border: 8px seagreen;
