Neat picture and neat text

--- a/sitePart1.css
+++ b/sitePart1.css
@@ -51,4 +51,15 @@ p .matn-l{
     border: 8px seagreen;
     min-height: 60px;
 }
-
+.byb{
+    display: flex;
+margin: 6px;
+}
+/*
+.text-section{
+    flex: 1;
+}*/
+.container{
+     flex: 1 ;
+     margin: 6px;
+}
